# tripmind

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: ask.py  documents.py  trips.py
app/schemas/: ask.py  document.py  trip.py
app/services/: chunking_service.py  document_service.py  rag_service.py  retrieval_service.py  text_extraction_service.py  trip_service.py  vector_store_service.py
